tests/paczka1/fuzzy1/42402372.err
Error in line 12: S141 A834 82,2
Error in line 6: PUz5k S172 16,1
Error in line 14: 0j2YMPC S141 52,8
Error in line 21: 3gh S141 65,03
Error in line 20: 3gh S172 90,5
Error in line 32: GACsqL S318 22,2
Error in line 36: GACsqL A834 94,9
